--- a/app/src/main/res/layout/activity_three_action.xml
+++ b/app/src/main/res/layout/activity_three_action.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="test.bwei.com.platform.activity.ThreeActionActivity">
+<EditText
+    android:hint="用户名"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/user" />
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/user"
+        android:hint="密码 "
+        android:id="@+id/password" />
+
+    <Button
+        android:id="@+id/login"
+        android:text="登录"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/password"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
