--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#fff</color>
     <color name="maincolor">#ffd200</color>
     <color name="hui">#999999</color>
+    <color name="under_line">#EDEBED</color>
 </resources>
