--- a/app/src/main/res/layout/activity_duan_zi.xml
+++ b/app/src/main/res/layout/activity_duan_zi.xml
@@ -31,4 +31,17 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/publish_content"
         android:src="@mipmap/publish_image" />
+    <RelativeLayout
+        android:id="@+id/pj_r1"
+        android:visibility="gone"
+        android:background="@color/alpha"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ProgressBar
+            android:id="@+id/pb"
+            android:layout_centerInParent="true"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </RelativeLayout>
