--- a/app/src/main/res/layout/leftmenu.xml
+++ b/app/src/main/res/layout/leftmenu.xml
@@ -221,7 +221,7 @@
         </LinearLayout>
 
         <LinearLayout
-
+            android:id="@+id/mset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
