--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="hui">#999999</color>
     <color name="under_line">#EDEBED</color>
     <color name="alpha">#80987654</color>
+    <color name="gray_back">#cccccc</color>
 </resources>
